# dbFaker

./: Cargo.toml  README.md  datasets.json
config/: default.yaml  rule.yaml
sled_db/: db  snap.00000000000011CB  snap.0000000000001C52  snap.0000000000001D50
src/: app.rs  controller.rs  main.rs  models.rs  sink.rs  spores.rs  test.rs  types.rs  ui.rs
src/controller/: api.rs  dataset.rs  index.rs
src/database/: database.rs
src/middleware/: db.rs  mod.rs
src/plant_structures/: leaves.rs  mod.rs
src/types/: bounds.rs  conf.rs  grayscale_map.rs  rule.rs
static/: dataset.html  dataset_add.html  dataset_edit.html  index.html
