[package]
name = "dbFaker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }
num = "0.4"
text-colorizer = "1"
regex = "1"
rand = "0.9.2"
config = "0.14"
mysql = "24"
once_cell = "1.21.3"
sled = "0.34.7"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde", "utc"] }
thiserror = "1.0"              # 自定义错误类型
anyhow = "1.0"                 # 简化错误处理（可选）
uuid = { version = "1.0", features = ["serde", "v4"] }